# Inkdown

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.svelte  app.css  main.ts  svelte.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: indexer.rs  lib.rs  main.rs  markdown.rs  models.rs  paths.rs  state.rs  stylus.rs
src-tauri/src/commands/: assets.rs  ink.rs  mod.rs  pages.rs  search.rs
src/components/: Editor.svelte  InkCanvas.svelte  ModeToggle.svelte  PageTree.svelte  Preview.svelte  SearchPalette.svelte  Titlebar.svelte  Toast.svelte  VaultPicker.svelte
src/lib/: cm-live-preview.ts  cm-theme.ts  config.svelte.ts  debounce.ts  ink.ts  katex.ts  markdown.ts  shortcuts.ts  stylus.ts  tauri.ts  toast.svelte.ts
