[package]
name = "inkdown"
version = "0.1.0"
description = "Inkdown - local-first notetaking with live markdown + native stylus ink."
authors = ["Theo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "inkdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-store = "2.4"
tauri-plugin-fs = "2.5"
tauri-plugin-opener = "2.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread", "macros"] }

pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
regex = "1.12"
walkdir = "2.5"
once_cell = "1.21"
blake3 = "1.8"

tantivy = "0.26"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
